# telco-churn-mlops

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/static/: index.html
docs/superpowers/plans/: 2026-06-17-churn-frontend.md
docs/superpowers/specs/: 2026-06-17-churn-frontend-design.md
models/: churn_pipeline.joblib  drift_reference.json  model_metadata.json
src/churn/: __init__.py  config.py  data.py  drift.py  preprocess.py  schemas.py  train.py
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_preprocess.py  test_train.py
