[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn-mlops"
version = "0.1.0"
description = "Production-grade churn prediction: XGBoost + Optuna + MLflow + FastAPI + drift monitoring"
requires-python = ">=3.10"
readme = "README.md"

# Runtime dependencies live in requirements.txt so Docker can install them
# without building the package. We mirror them here so `pip install -e .` works.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "optuna>=3.6",
    "mlflow>=2.14",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "joblib>=1.4",
    "scipy>=1.11",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

# Tell setuptools our code lives under src/ (the "src layout").
# This forces tests to import the *installed* package, not loose files —
# which catches packaging mistakes early. It's the production-standard layout.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle errors, I = import sorting, UP = modern syntax
select = ["E", "F", "I", "UP", "B"]
# E501: line length handled by formatter. B008: Depends(...) in defaults is the
# intended FastAPI dependency-injection pattern, not a bug.
ignore = ["E501", "B008"]
